--- a/FoodFight/app/src/main/AndroidManifest.xml
+++ b/FoodFight/app/src/main/AndroidManifest.xml
@@ -6,8 +6,9 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-feature android:name="android.hardware.camera"
         android:required="true" />
-
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <application
+
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -26,3 +27,4 @@
     </application>
 
 </manifest>
+
